css/stylesheet.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Bungee&family=Roboto+Mono&display=swap');

html {
    scroll-behavior: smooth;
}

/* main colors

"#660000" or "rgb(102, 0, 0)": Blood Red
+++"#D4AF37" or "rgb(212, 175, 55)": Gold Metallic
"#CBA135" or "rgb(203, 161, 53)": Satin Sheen Gold
"#1C1C1C" or "rgb(28, 28, 28)": Eerie Black
"#36454F" or "rgb(54, 69, 79)": Charcoal
+++"#c0c0c0" or "rgb(192, 192, 192)": Silver
"#ACACAC" or "rgb(172, 172, 172)": Silver Chalice

*/

/* Resolution breakpoints

360x640 min res
1920x1080 max res

@media only screen and (max-width:600px) {

}

@media only screen and (min-width:600px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {

}

@media only screen and (min-width:1200px) {

}

*/
* {
    box-sizing: border-box;
    margin: 0;
    border: 0;
    padding: 0;
}

body {
    font-family: 'Roboto Mono', monospace;
    font-size: 1em;
    color: #c0c0c0;
    background-color: #1c1c1c;
    text-rendering: optimizeLegibility;
}

h2, h3 {
    font-family: 'Aldrich', sans-serif;
}

h1 {
    font-family: 'Bungee', cursive;
    font-size: 8em;
    line-height: .85em;
    text-align: center;
}

h2 {
    font-size: 4em;
    padding-left: .5em;
    text-transform: uppercase;
}

h3 {
    font-size: 2em;
}

a {
    text-decoration: none;
    color: #cba135;
}

p {
    line-height: 1.2em;
}

.fContent {
    overflow-x: scroll;
    overflow-y: hidden;
    width: auto;
    height: 100vh;
    white-space: nowrap;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
}

.fContent::-webkit-scrollbar {
    display: none;
}

.fSection {
    display: inline-block;
    overflow: hidden;
    width: 100vw;
    height: 100vh;
}

/* NAVIGATION BAR */

.fNav {
    position: sticky;
    left: 0;
    text-align: center;
    width: auto;
}

.fNav ul {
    background: #cba135;
    width: auto;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.fNav ul li {
    color: #1c1c1c;
    height: 10vw;
    width: 10vw;
    cursor: pointer;
}

.fNav ul li:hover {
    transition: .5s ease;
    background-color: #600;
    color: #c0c0c0;
}

/* FOLD SECTION */

#fFold {
    background-color: #600;
}

/* ABOUT SECTION */
.fMe {
    display: flex;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.fMe .fProfoto {
    width: 256px;
    margin: 16px;
}

.fMe .fBio {
    min-width: 256px;
    max-width: 1024px;
    margin: 16px;
    text-align: justify;
}

/* SERVICES SECTION */

#fServices {
    background-color: #36454f;
}

.fServices {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.fServ {
    width: 256px;
    height: 256px;
    margin: 4px;
    padding: 16px;
    text-align: center;
}

.fServ img {
    height: 128px;
}

/* PROJECTS SECTION */

.fProjects {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.fProjectcard {
    display: grid;
    margin: 4px;
    cursor: pointer;
    transition: .5s ease;
    text-align: justify;
    border-width: 8px;
    border-style: solid;
    border-color: #c0c0c0;
    border-radius: 4px;
    background: #600;
    grid-template-columns: 256px;
    grid-template-rows: 256px 192px;
    grid-template-areas: 'image''text';
}

.fProjectcard-image {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background: linear-gradient(#fff0 0%, #fff0 70%, #600 100%), url(../images/itisme_web256.jpg);
    background-color: #600;
    background-size: cover;
    grid-area: image;
}

.fProjectcard-text {
    margin: 16px;
    grid-area: text;
}

.fProjectcard-text .kind {
    font-size: 12px;
}

.fProjectcard-text p {
    font-size: 16px;
}

.fProjectcard-text h2 {
    font-size: 28px;
    margin-top: 0;
    padding-left: 0;
}

.fProjectcard:hover {
    /*transform: scale(1.2);*/
}

/* CONTACT SECTION */

#fContact {
    background-color: #36454f;
}

#fContact p {
    margin: 16px;
}

/* BLOG ROLL SECTION */

.fBlogroll {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.fBlogcard {
    display: grid;
    margin: 4px;
    cursor: pointer;
    transition: .5s ease;
    text-align: center;
    border-width: 8px;
    border-style: solid;
    border-color: #c0c0c0;
    border-radius: 4px;
    background: #cba135;
    grid-template-columns: 256px;
    grid-template-rows: 192px 192px 64px;
    grid-template-areas: 'image''text''stats';
}

.fBlogcard-image {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background-color: #600;
    background-image: url(../images/itisme_web256.jpg);
    background-size: cover;
    grid-area: image;
}

.fBlogcard-text {
    margin: 16px;
    color: #1c1c1c;
    grid-area: text;
}

.fBlogcard-text .date {
    font-size: 12px;
}

.fBlogcard-text p {
    font-size: 16px;
}

.fBlogcard-text h2 {
    font-size: 28px;
    margin-top: 0;
    padding-left: 0;
}

.fBlogcard-stats {
    display: grid;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    background-color: #600;
    grid-area: stats;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
}

.fBlogcard-stats .stat {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 10px;
}

.fBlogcard:hover {
    transform: scale(1.2);
}

/* FOOTER SECTION */

.footer {
    background-color: #36454f;
}

.fSNS {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: center;
}

.fSNS-button {
    width: 120px;
    height: 120px;
    text-align: center;
    border-radius: 4px;
    background-color: #acacac;
}

.fSNS-button img {
    width: 112px;
    height: 112px;
    margin-top: 4px;
}

.fFooternav {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.fFooternav {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.fFooternav div {
    line-height: 200%;
    width: 256px;
    margin: 4px;
    padding: 16px;
}

.fFooternav div ul li {
    list-style-type: none;
}

.fDisclaimer {
    /*margin: 8px;
    display: flex;*/
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
}

